Fix Hero block layout on Firefox

--- a/assets/scss/blocks/_b-hero.scss
+++ b/assets/scss/blocks/_b-hero.scss
@@ -5,11 +5,15 @@
     justify-content: flex-start;
     align-items: center;
     position: relative; // Makes sure the ratio stays the same across different viewports.
-
+    
+    /** 
+     * [1] Fix issues with Firefox failing to apply padding to the element.
+     */
     &:after {
         content: "";
         width: 1px;
         padding-top: 33.3333%;
+        display: table; /*[1]*/
     }
 
     &__background {
